--- a/SubEthaEdit-Mac/English.lproj/SelectEncodingsPanel.xib
+++ b/SubEthaEdit-Mac/English.lproj/SelectEncodingsPanel.xib
@@ -7,6 +7,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="EncodingManager">
             <connections>
                 <outlet property="encodingMatrix" destination="9" id="12"/>
+                <outlet property="window" destination="5" id="CU8-yf-gQ5"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -105,6 +106,9 @@
                     </button>
                 </subviews>
             </view>
+            <connections>
+                <outlet property="delegate" destination="-2" id="cKd-fd-0MP"/>
+            </connections>
         </window>
     </objects>
 </document>
