--- a/SubEthaEdit-Mac/German.lproj/PlainTextLoadProgress.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextLoadProgress.xib
@@ -6,9 +6,9 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PlainTextLoadProgress">
             <connections>
-                <outlet property="_loadProgressView" destination="5" id="9"/>
-                <outlet property="_loadStatusField" destination="8" id="11"/>
-                <outlet property="_progressIndicator" destination="7" id="10"/>
+                <outlet property="loadStatusFieldOutlet" destination="8" id="MIt-2x-7OE"/>
+                <outlet property="progressIndicatorOutlet" destination="7" id="ivF-lX-RfT"/>
+                <outlet property="view" destination="5" id="wfE-jR-ZHL"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
