--- a/SubEthaEdit-Mac/English.lproj/PrintOptions.xib
+++ b/SubEthaEdit-Mac/English.lproj/PrintOptions.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PlainTextDocument">
+        <customObject id="-2" userLabel="File's Owner" customClass="SEEPrintOptionsViewController">
             <connections>
-                <outlet property="O_printOptionController" destination="61" id="72"/>
-                <outlet property="O_printOptionTextField" destination="131" id="186"/>
-                <outlet property="O_printOptionView" destination="5" id="71"/>
+                <outlet property="printOptionControllerOutlet" destination="61" id="XSX-7U-Dyc"/>
+                <outlet property="printOptionTextFieldOutlet" destination="131" id="Qcb-Lz-PYd"/>
+                <outlet property="view" destination="5" id="VtF-qU-Nc3"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -58,7 +58,7 @@
                                     <font key="font" metaFont="smallSystem"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="changeFontViaPanel:" target="-2" id="101"/>
+                                    <action selector="changeFontViaPanel:" target="-2" id="wfM-MO-Nhn"/>
                                     <binding destination="61" name="enabled" keyPath="selection.SEEUseCustomFont" id="108"/>
                                 </connections>
                             </button>
@@ -130,18 +130,18 @@
                                 </connections>
                             </button>
                             <textField verticalHuggingPriority="750" id="131" customClass="FontForwardingTextField">
-                                <rect key="frame" x="31" y="39" width="189" height="32"/>
+                                <rect key="frame" x="33" y="39" width="185" height="32"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Small System Font Text" id="221">
+                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Small System Font Text" drawsBackground="YES" id="221">
                                     <font key="font" metaFont="smallSystem"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                                 <connections>
                                     <binding destination="61" name="value" keyPath="selection.SEEFontAttributes" id="136">
                                         <dictionary key="options">
-                                            <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                             <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                            <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                             <bool key="NSConditionallySetsEditable" value="NO"/>
                                             <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
                                             <string key="NSValueTransformerName">FontAttributesToString</string>
