--- a/SubEthaEdit-Mac/German.lproj/PrintOptions.xib
+++ b/SubEthaEdit-Mac/German.lproj/PrintOptions.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PlainTextDocument">
+        <customObject id="-2" userLabel="File's Owner" customClass="SEEPrintOptionsViewController">
             <connections>
-                <outlet property="O_printOptionController" destination="61" id="72"/>
-                <outlet property="O_printOptionView" destination="5" id="71"/>
+                <outlet property="printOptionControllerOutlet" destination="61" id="CFq-cm-ZdA"/>
+                <outlet property="printOptionTextFieldOutlet" destination="131" id="bUt-K2-GUU"/>
+                <outlet property="view" destination="5" id="Xe9-bw-PEe"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -57,7 +58,7 @@
                                     <font key="font" metaFont="smallSystem"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="changeFontViaPanel:" target="-2" id="101"/>
+                                    <action selector="changeFontViaPanel:" target="-2" id="zHP-s2-Z97"/>
                                     <binding destination="61" name="enabled" keyPath="selection.SEEUseCustomFont" id="108"/>
                                 </connections>
                             </button>
@@ -139,11 +140,11 @@
                                 <connections>
                                     <binding destination="61" name="value" keyPath="selection.SEEFontAttributes" id="136">
                                         <dictionary key="options">
+                                            <string key="NSValueTransformerName">FontAttributesToString</string>
                                             <bool key="NSContinuouslyUpdatesValue" value="YES"/>
-                                            <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                             <bool key="NSConditionallySetsEditable" value="NO"/>
                                             <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                            <string key="NSValueTransformerName">FontAttributesToString</string>
+                                            <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                         </dictionary>
                                     </binding>
                                     <binding destination="61" name="enabled" keyPath="selection.SEEUseCustomFont" id="138">
