--- a/SubEthaEdit-Mac/SubEthaPerf/Resources/SEPMainMenu.xib
+++ b/SubEthaEdit-Mac/SubEthaPerf/Resources/SEPMainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1060" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
+        <deployment defaultVersion="1090" identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication"/>
@@ -547,14 +547,14 @@ DQ
                         <rect key="frame" x="-1" y="50" width="818" height="360"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="soT-Mn-3VX">
-                            <rect key="frame" x="1" y="1" width="801" height="358"/>
+                            <rect key="frame" x="1" y="1" width="816" height="358"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <textView importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="454">
-                                    <rect key="frame" x="0.0" y="0.0" width="801" height="358"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="816" height="358"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="801" height="358"/>
+                                    <size key="minSize" width="816" height="358"/>
                                     <size key="maxSize" width="1619" height="10000000"/>
                                     <attributedString key="textStorage">
                                         <fragment>
@@ -602,17 +602,17 @@ DQ
                                         </fragment>
                                     </attributedString>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="801" height="358"/>
+                                    <size key="minSize" width="816" height="358"/>
                                     <size key="maxSize" width="1619" height="10000000"/>
                                 </textView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </clipView>
-                        <scroller key="horizontalScroller" verticalHuggingPriority="750" doubleValue="1" id="453">
+                        <scroller key="horizontalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="453">
                             <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="0.46875" id="452">
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="0.46875" horizontal="NO" id="452">
                             <rect key="frame" x="802" y="1" width="15" height="358"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
