--- a/SubEthaEdit-Mac/Debug/DebugPresence.xib
+++ b/SubEthaEdit-Mac/Debug/DebugPresence.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="13A584" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1060" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4510"/>
+        <deployment defaultVersion="1090" identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="DebugPresenceController">
@@ -13,7 +13,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <window title="Presence Information" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" wantsToBeColor="NO" visibleAtLaunch="NO" animationBehavior="default" id="6" userLabel="Window">
+        <window title="Presence Information" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="6" userLabel="Window">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="342" y="338" width="541" height="430"/>
@@ -26,11 +26,11 @@
                         <rect key="frame" x="0.0" y="139" width="541" height="291"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="er7-ZI-nzS">
-                            <rect key="frame" x="1" y="17" width="524" height="258"/>
+                            <rect key="frame" x="1" y="17" width="539" height="273"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView autoresizesSubviews="NO" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="20" headerView="116" id="8">
-                                    <rect key="frame" x="0.0" y="0.0" width="524" height="258"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="539" height="273"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -103,7 +103,7 @@
                                                 <binding destination="26" name="value" keyPath="arrangedObjects.InternalIsVisible" id="91"/>
                                             </connections>
                                         </tableColumn>
-                                        <tableColumn width="226" minWidth="40" maxWidth="1000" id="10">
+                                        <tableColumn width="240.5" minWidth="40" maxWidth="1000" id="10">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Netservice">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -124,16 +124,16 @@
                             </subviews>
                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
-                        <scroller key="horizontalScroller" verticalHuggingPriority="750" id="115">
-                            <rect key="frame" x="1" y="275" width="524" height="15"/>
+                        <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="115">
+                            <rect key="frame" x="1" y="274" width="539" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" id="117">
-                            <rect key="frame" x="525" y="17" width="15" height="258"/>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="117">
+                            <rect key="frame" x="525" y="17" width="15" height="273"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <tableHeaderView key="headerView" id="116">
-                            <rect key="frame" x="0.0" y="0.0" width="524" height="17"/>
+                            <rect key="frame" x="0.0" y="0.0" width="539" height="17"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </tableHeaderView>
                     </scrollView>
@@ -157,11 +157,11 @@
                         <rect key="frame" x="111" y="0.0" width="430" height="131"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <clipView key="contentView" id="0u9-AW-3Ch">
-                            <rect key="frame" x="1" y="17" width="417" height="102"/>
+                            <rect key="frame" x="1" y="17" width="428" height="113"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView autoresizesSubviews="NO" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="119" id="93">
-                                    <rect key="frame" x="0.0" y="0.0" width="417" height="102"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="428" height="113"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -183,7 +183,7 @@
                                                 <binding destination="97" name="value" keyPath="arrangedObjects.filename" id="102"/>
                                             </connections>
                                         </tableColumn>
-                                        <tableColumn width="250.0369873046875" minWidth="8" maxWidth="1000" id="95">
+                                        <tableColumn width="261.0369873046875" minWidth="8" maxWidth="1000" id="95">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Access State">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -204,16 +204,16 @@
                             </subviews>
                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
-                        <scroller key="horizontalScroller" verticalHuggingPriority="750" controlSize="small" id="118">
-                            <rect key="frame" x="1" y="119" width="417" height="11"/>
+                        <scroller key="horizontalScroller" verticalHuggingPriority="750" controlSize="small" horizontal="YES" id="118">
+                            <rect key="frame" x="1" y="116" width="428" height="14"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" controlSize="small" id="120">
-                            <rect key="frame" x="418" y="17" width="11" height="102"/>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" controlSize="small" horizontal="NO" id="120">
+                            <rect key="frame" x="415" y="17" width="14" height="113"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <tableHeaderView key="headerView" id="119">
-                            <rect key="frame" x="0.0" y="0.0" width="417" height="17"/>
+                            <rect key="frame" x="0.0" y="0.0" width="428" height="17"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </tableHeaderView>
                     </scrollView>
