--- a/SubEthaEdit-Mac/German.lproj/PrintOptions.xib
+++ b/SubEthaEdit-Mac/German.lproj/PrintOptions.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -141,10 +141,10 @@
                                     <binding destination="61" name="value" keyPath="selection.SEEFontAttributes" id="136">
                                         <dictionary key="options">
                                             <string key="NSValueTransformerName">FontAttributesToString</string>
-                                            <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                            <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                             <bool key="NSConditionallySetsEditable" value="NO"/>
                                             <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                            <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                            <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                         </dictionary>
                                     </binding>
                                     <binding destination="61" name="enabled" keyPath="selection.SEEUseCustomFont" id="138">
