--- a/SubEthaEdit-Mac/German.lproj/StylePrefs.xib
+++ b/SubEthaEdit-Mac/German.lproj/StylePrefs.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="StylePreferences">
@@ -27,7 +27,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" wantsToBeColor="NO" visibleAtLaunch="NO" animationBehavior="default" id="6" userLabel="Window">
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="6" userLabel="Window">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="204" y="280" width="551" height="530"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="832"/>
@@ -267,11 +267,11 @@
                                                     </subviews>
                                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                 </clipView>
-                                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" id="455">
+                                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="455">
                                                     <rect key="frame" x="-100" y="-100" width="432" height="15"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </scroller>
-                                                <scroller key="verticalScroller" verticalHuggingPriority="750" id="456">
+                                                <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="456">
                                                     <rect key="frame" x="432" y="1" width="16" height="164"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </scroller>
@@ -294,9 +294,9 @@
                                                                 <connections>
                                                                     <binding destination="423" name="value" keyPath="selection.defaults.BackgroundColorIsDark" id="427">
                                                                         <dictionary key="options">
-                                                                            <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                                                            <bool key="NSConditionallySetsEnabled" value="NO"/>
                                                                             <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                                                            <bool key="NSConditionallySetsEnabled" value="NO"/>
+                                                                            <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
                                                                         </dictionary>
                                                                     </binding>
                                                                 </connections>
