--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -27,7 +27,7 @@
             <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <customView autoresizesSubviews="NO" id="6" userLabel="Placeholder Scroll View" customClass="NSScrollView">
+                <customView autoresizesSubviews="NO" id="6" customClass="SEEPlainTextEditorScrollView">
                     <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
@@ -36,6 +36,14 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         </customView>
                     </subviews>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="topOverlayHeightNumber">
+                            <integer key="value" value="17"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="bottomOverlayHeightNumber">
+                            <integer key="value" value="17"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </customView>
                 <customView autoresizesSubviews="NO" id="28" userLabel="Bottom Blurred View" customClass="RMBlurredView">
                     <rect key="frame" x="0.0" y="0.0" width="409" height="17"/>
