--- a/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
@@ -14,6 +14,7 @@
                 <outlet property="O_modePopUpButton" destination="75" id="76"/>
                 <outlet property="O_positionTextField" destination="13" id="14"/>
                 <outlet property="O_scrollView" destination="6" id="11"/>
+                <outlet property="O_splitButton" destination="cPs-Ka-upO" id="WZ3-I4-keW"/>
                 <outlet property="O_symbolPopUpButton" destination="61" id="62"/>
                 <outlet property="O_tabStatusPopUpButton" destination="84" id="86"/>
                 <outlet property="O_topStatusBarView" destination="27" id="30"/>
@@ -62,7 +63,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         </customView>
                         <textField verticalHuggingPriority="750" id="25">
-                            <rect key="frame" x="227" y="-1" width="181" height="17"/>
+                            <rect key="frame" x="210" y="-1" width="181" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="&lt;written by ....>" id="91">
                                 <font key="font" metaFont="smallSystem"/>
@@ -87,6 +88,17 @@
                             <autoresizingMask key="autoresizingMask"/>
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="WaitPipe" id="92"/>
                         </imageView>
+                        <button id="cPs-Ka-upO">
+                            <rect key="frame" x="392" y="0.0" width="17" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SplitOpen" imagePosition="only" alignment="center" alternateImage="SplitClose" transparent="YES" imageScaling="proportionallyDown" inset="2" id="wd5-GI-xyx">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="toggleSplitView:" target="-1" id="7FJ-Xy-kDn"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="saturationFactorNumber">
@@ -156,6 +168,8 @@
         </customView>
     </objects>
     <resources>
+        <image name="SplitClose" width="15" height="15"/>
+        <image name="SplitOpen" width="15" height="15"/>
         <image name="WaitPipe" width="13" height="12"/>
     </resources>
 </document>
