--- a/SubEthaEdit-Mac/German.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/German.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C44" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -623,7 +623,7 @@
                         <items>
                             <menuItem title="Teilnehmer einblenden" id="227">
                                 <connections>
-                                    <action selector="toggleParticipantsDrawer:" target="-1" id="228"/>
+                                    <action selector="toggleParticipantsOverlay:" target="-1" id="Oaf-54-M4k"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="226">
